feat(UI):addd manual order

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "build",
+    "public": "dist/rbs_com/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
