--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/fire": "7.6.1",
     "@angular/forms": "^18.0.0",
     "@angular/material": "^19.2.11",
+    "@angular/material-moment-adapter": "^19.2.16",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
@@ -26,7 +27,9 @@
     "animate.css": "^4.1.1",
     "firebase": "^11.6.0",
     "handsontable": "^15.2.0",
+    "moment": "^2.30.1",
     "ngx-bottom-sheet": "^1.0.1",
+    "ngx-daterangepicker-material": "^6.0.4",
     "papaparse": "^5.5.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
